fix: flicker na mudança de tema

--- a/resources/css/filament.css
+++ b/resources/css/filament.css
@@ -3,12 +3,8 @@
     stroke-width: 2;
 }
 
-html {
-    scroll-behavior: smooth;
-}
-
 .dark .fi-sidebar-header,
-.dark .fi-topbar nav {
+.dark .fi-topbar {
     background-color: #23293c !important;
 }
 
@@ -27,4 +23,26 @@ html {
 
 :is(.dark .fi-body) {
     background-color: #20263a !important;
+}
+
+.dark .fi-sidebar-nav::-webkit-scrollbar {
+    width: 8px;
+}
+
+.dark .fi-sidebar-nav::-webkit-scrollbar-track {
+    background-color: #161d31; /* scrollbar track (background) */
+}
+
+.dark .fi-sidebar-nav::-webkit-scrollbar-thumb {
+    background-color: #2e3a59; /* scrollbar handle */
+    border-radius: 4px;
+}
+
+.dark .fi-sidebar-nav::-webkit-scrollbar-thumb:hover {
+    background-color: #3d4c73;
+}
+
+html.dark *,
+html:not(.dark) * {
+  transition: none !important;
 }
